# rust_rts

./: .gitignore  .~lock.Units.ods#  AI.odt  Cargo.toml  README.md  Units.ods  trig.txt
maps/: Map2.json  Map2.tmx  TerrainMapping.json  TerrainMapping.tmx  rule1.tmx  tileset.tsx  tileset.xcf  water.tmx
src/: basic.rs  basic_missile.rs  basic_unit.rs  basic_weapon.rs  bytegrid.rs  data.rs  gamedata.rs  jps.rs  jump_point_search.rs  kdt.rs  kdtree.rs  main.rs  movement.rs  netcom.rs  pathing.rs  setup_game.rs  useful_bits.rs  vis_set.rs
src/behavior/: mod.rs
src/behavior/missile/: core.rs
src/behavior/unit/: building.rs  core.rs  mod.rs
src/behavior/weapon/: core.rs
src/data/: aliases.rs  bomb_bay.rs  build_groups.rs  entities.rs  entity  event_handlers.rs  game.rs  kdt_point.rs  logger.rs  missiles.rs  mod.rs  move_groups.rs  move_stats.rs  order.rs  target_type.rs  teams.rs  uid_types.rs  units.rs  weapons.rs
src/libs/: bitvec.rs  bytegrid.rs  fast_float.rs  fine_grid.rs  fixed_point.rs  kdt.rs  mod.rs  movement.rs  netcom.rs  tiny_float.rs  tmx_decode.rs
src/missiles/: artillery.json  fast.json  medium.json
src/pathing/: direction.rs  mod.rs  path_grid.rs  pathing.rs
src/units/: artillery1.json  artillery1.rs  extractor1.json  extractor1.rs  factory1.json  fast1.json  fast1.rs  medium1.json  medium1.rs  missile_list.rs  mod.rs  test_structure.rs  test_unit.json  test_unit.rs  unit_list.rs  weapon_list.rs
ts_client/: ts_client.sln
ts_client/RTSClient/: Imageer.js  Imageer.js.map  index.html  ts_client.csproj
ts_client/RTSClient/js/: game.js  (+9 more)
(+58 files in other folders)
