[package]

name = "rust_rts"
version = "0.0.1"
authors = ["ZacharyKamerling <ZacharyKamerling@gmail.com>"]

[dependencies]
rand = "0.3"
time = "0.1"
websocket = "0.15.0"
byteorder = "0.3"
fnv = "1.0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bit-vec = "*"
enum_primitive = "*"
num = "*"
clippy = {version = "*"}

[features]
default = []